# mcp-web-search

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_server.py  package-lock.json  package.json  pyproject.toml  test-mcp.js
src/: index.ts  selenium-search.d.ts  selenium-search.js
