[project]
name = "python-web-search-mcp"
version = "0.1.0"
description = "MCP web search server (DuckDuckGo search + HTTP fetch) exposed via SSE for LibreChat"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "anyio",
    "httpx",
    "beautifulsoup4",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"